# dashlang

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_cli.yml  test_on_push.yml
examples/: age.dash  bitwise_even.dash  compare_atom.dash  dashing.dash  destructuring.dash  fatorial.dash  for_loop.dash  fruits.dash  greet.dash  increments.dash  map.dash  person.dash  piping.dash  printing.dash  strings.dash  unary.dash  vectors.dash
examples/errors/: invalid_assignment.dash  invalid_operation.dash  non_callable.dash  wrong_args.dash
