[package]
name = "dashlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "packages/tokens",
  "packages/eval"
]

[workspace.dependencies]
tokens = {path = "packages/tokens"}

[dependencies]
tokens = {path = "packages/tokens"}
eval = {path = "packages/eval"}
