[package]
name = "dashlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "packages/ast",
  "packages/eval"
]

[workspace.dependencies]
ast = {path = "packages/ast"}

[dependencies]
ast = {path = "packages/ast"}
eval = {path = "packages/eval"}
