[package]
name = "dashlang"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "packages/ast",
  "packages/eval",
  "packages/parse",
  "packages/run_file",
  "packages/cli"
]

[workspace.dependencies]
ast = {path = "packages/ast"}
eval = {path = "packages/eval"}
parse = {path = "packages/parse"}
run_file = {path = "packages/run_file"}

[dependencies]
